# whispr

./: .gitignore  .prettierignore  .prettierrc  PLAN.md  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  cleanup_stats.rs  commands.rs  config.rs  history.rs  lib.rs  main.rs  media.rs  overlay.rs  paste.rs  permissions.rs  ptt.rs  recorder.rs  state.rs  stats.rs  transcription.rs  transcription_stream.rs  tray.rs
src/components/: AiCleanupField.tsx  ApiKeyField.tsx  AppearanceField.tsx  CollapsibleCard.tsx  HistoryTab.tsx  MicrophoneField.tsx  PlaybackField.tsx  ReplacementsField.tsx  ShortcutField.tsx  ShortcutRecorder.tsx  StatsTab.tsx  TranscriptionField.tsx  UpdateBanner.tsx
src/hooks/: useAppUpdate.ts  useAudioCapture.ts  useConfirmAction.ts  usePtt.ts  useTheme.ts
src/lib/: api.ts  types.ts
src/overlay/: OverlayApp.css  OverlayApp.tsx
